--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1037,6 +1037,7 @@ main .header.header-06 {
 
 main .header.header-06 .header-right {
   color: #fff;
+  text-align: right;
   font-size: 20px;
   font-family: 'Space Mono', sans-serif;
 }
